created container orchestration, other small changes to switch to postgres
